[Dev] Endpoints filtros, documentacion y test.
