# src/middlewares/validations/alreadyFollowing.middleware.js
@@ -1,0 +1,20 @@
+const HTTP = require("../../config/HttpCode");
+const { User } = require("../../db/models");
+
+const alreadyFollowingMiddleware = async (req, res, next) => {
+    const followingId = req.params.id;
+    const followerId = req.body.follower_id;
+
+    const following = await User.findByPk(followingId);
+    const alreadyFollowing = await following.hasFollower(followerId);
+
+    if (alreadyFollowing) {
+        return res.status(HTTP.CONFLICT).json({
+            message: res.__("already_following"),
+        });
+    }
+
+    next();
+};
+
+module.exports = alreadyFollowingMiddleware;
