# src/routes/tag.routes.js
@@ -1,42 +1,33 @@
 const express = require("express");
 const router = express.Router();
-const { Tag } = require("../db/models");
-const {
-  createTag,
-  getAllTags,
-  getTagById,
-  updateTag,
-  deleteTag,
-} = require("../controllers/tag.controller");
+const { Tag, Post } = require("../db/models");
+const { createTag, getAllTags, getTagById, updateTag, deleteTag } = require("../controllers/tag.controller");
 const schemaValidatorMiddleware = require("../middlewares/validations/schema.middleware");
+const querySchemaValidatorMiddleware =
+    require("../middlewares/validations/schema.middleware").querySchemaValidatorMiddleware;
 const existValidateMiddleware = require("../middlewares/validations/exist.middleware");
 const numericParamValidateMiddleware = require("../middlewares/validations/numeric.middleware");
-const { tagSchema, updateTagSchema } = require("../schemas/tag.schema");
+const { tagSchema, updateTagSchema, getAllTagsQuerySchema } = require("../schemas/tag.schema");
 
-router.get("/", getAllTags);
+router.get(
+    "/",
+    querySchemaValidatorMiddleware(getAllTagsQuerySchema),
+    existValidateMiddleware(Post, "post_id", { optional: true }),
+    getAllTags,
+);
 
 router.post("/", schemaValidatorMiddleware(tagSchema), createTag);
 
-router.get(
-  "/:id",
-  numericParamValidateMiddleware("id"),
-  existValidateMiddleware(Tag, "id"),
-  getTagById,
+router.get("/:id", numericParamValidateMiddleware("id"), existValidateMiddleware(Tag, "id"), getTagById);
+
+router.patch(
+    "/:id",
+    numericParamValidateMiddleware("id"),
+    existValidateMiddleware(Tag, "id"),
+    schemaValidatorMiddleware(updateTagSchema),
+    updateTag,
 );
 
-router.put(
-  "/:id",
-  numericParamValidateMiddleware("id"),
-  existValidateMiddleware(Tag, "id"),
-  schemaValidatorMiddleware(updateTagSchema),
-  updateTag,
-);
-
-router.delete(
-  "/:id",
-  numericParamValidateMiddleware("id"),
-  existValidateMiddleware(Tag, "id"),
-  deleteTag,
-);
+router.delete("/:id", numericParamValidateMiddleware("id"), existValidateMiddleware(Tag, "id"), deleteTag);
 
 module.exports = router;
